# embedded_scripting_language

./: Cargo.toml
embed/: Cargo.toml
examples/: simple.rs  simple.script
shared/: Cargo.toml
shared/src/: evaluator.rs  lib.rs  runtime.rs  traits.rs
shared/src/compiler/: ast.rs  mod.rs  tokens.rs
shared/src/instructions/: mod.rs
src/: engine.rs  eval_context.rs  eval_options.rs  lib.rs  method_args.rs  stack.rs
src/ast/: mod.rs
web/: Cargo.toml  LICENSE_MIT
web/www/: index.html  index.js  package-lock.json
