[package]
name = "shared"
version = "0.1.0"
authors = ["Trangar <github@trangar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
arrayvec = "0.5"

[features]
default = ["compiler"]
alloc = []
compiler = ["alloc"]
